dohpaZ (03/04/02)
------------------
Modifications:
 + Minor bug fix in equipment handling (should clear up spurious unknown
   weapons.
 + Support displaying Unknown1 possibly slot in info display, think it may
   be back slot so using letter B and that it is a material, this could well
   be an incorrect assumption.  Also put a colon ":" between slot designator 
   and slot content
 + Additional logic for managing dead spawn ID's in SpawnShell
 + Initial tentative modifications to handle world chat server data (still
   not functional, but it's a start).

fee    (01/04/02)
------------------
Modifications:
 + clean up some stdout messages
 + added NoBank option under [Misc] in showeq.conf.dist
   set to 1(now default) causes inventory items not to be printed out to stdout
   set to 0 to see inventory 
 + added new OpCode named CharUpdate for lack of a better idea, may have future uses
 + fixed bug were exp and aaexp were not being displayed in status bar correctly
 + showeq will no long support libEQ, you will now need to type in characted and 
   mob information manually after you zone.

dohpaZ (29/03/02)
------------------
Modifications:
 + Updated tradeItemOutStruct
 + Fixed window caption setting for Spawn List and Compass, just set the Caption.
 + Updated version to 4.0.1, just for kicks...

dohpaZ (27/03/02)
------------------
Bug Fix:
 + No longer crash if LOGDIR "/eqstr_en.txt" isn't there... ;-) Doh!

dohpaZ (26/03/02)
------------------
Modifications:
 + Remove artificial dependency on EQPacket from CombatWindow and 
   ExperienceWindow.  
 + Remove artificial dependency on EQPlayer from EQPacket.  Also removed
   non-sensical m_parent member from EQPacket.
 + Assorted general code cleanup
 + updated itemInShopStruct (more or less)
 + added formattedMessageStruct and it's opcode FormattedMessageCode (0x3622)
   These are used for many of the messages displayed to the user, by default